turtleart.smallsquare.SmallSquare.scala.error
Compilation error:
SmallSquare:10: error: Unmatched closing brace '}' ignored here
}
^